# pact-protocol

./: Anchor.toml  README.md  package-lock.json  package.json
app/: package.json  tailwind.config.js
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/dashboard/: page.tsx
mcp/: package.json  tsconfig.json
mcp/src/: index.ts  solana.ts  tools.ts  types.ts
programs/pact-protocol/: Cargo.toml
programs/pact-protocol/src/: lib.rs
scripts/: demo.ts
tests/: pact-protocol.ts
